# tiny-python_infrastructure

./: .gitignore  Cargo.toml  README.md
.github/workflows/: _check.yml  _demo.yml  _native.yml  _wasm.yml  demo.yml  integration-tests.yml  native.yml  pages.yml  pipeline.yml  wasm.yml
compiler/: Cargo.toml  README.md  main.py
compiler/.cargo/: config.toml
compiler/src/: lib.rs  main.rs  wasm.rs
compiler/src/modules/: compiler.rs  fstr.rs  fx.rs  lexer.rs  opcodes.rs  parser.rs  vm.rs
compiler/src/modules/lexer/: mod.rs  scan.rs  tables.rs
compiler/src/modules/parser/: control.rs  expr.rs  literals.rs  mod.rs  stmt.rs  types.rs
compiler/src/modules/vm/: builtins.rs  cache.rs  collections.rs  mod.rs  ops.rs  optimizer.rs  super_ops.rs  threaded.rs  types.rs
compiler/src/modules/vm/handlers/: arith.rs  attr.rs  control.rs  data.rs  function.rs  methods.rs  mod.rs  unsupported.rs
compiler/tests/: integration_test.rs  lexer.rs  lexer_test.rs  main.rs  parser.rs  parser_test.rs  vm.rs  vm_test.rs
compiler/tests/cases/: lexer_cases.json  parser.json  parser_cases.json  vm.json  vm_cases.json
demo/: README.md  index.html  main.html  main.js  packages.json  style.css  tailwind.config.js  version.json  worker.js
deployment/: Cargo.toml  README.md
deployment/src/: cloudflare.rs  config.rs
deployment/tests/: cloudflare_test.rs  integration_test.rs
documentation/: docs.json
documentation/getting-started/: quickstart.md  what-it-is.md
documentation/implementation/: design.md  lexical.md  syntax.md
documentation/language/: control-flow.md  data-types.md  functions.md  syntax.md
documentation/reference/: builtins.md  limits-and-errors.md  methods.md
src/: config.rs
