[package]
name = "edge-python"
version = "0.1.0"
edition = "2024"
description = "Single-pass SSA compiler based on CPython 3.13: hand-written lexer, token-to-bytecode parser, adaptive virtual machine with NaN-boxed values, inline caching, template memoization, mark-sweep garbage collector, and configurable sandbox limits. Native and WASM targets."
repository = "https://github.com/dylan-sutton-chavez/edge-python/"
license = "MIT OR Apache-2.0"
readme = "README.md"
autotests = false

[lib]
name = "compiler_lib"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "edge"
path = "src/main.rs"

[[test]]
name = "tests"
path = "tests/main.rs"

[dependencies]
hashbrown = { version = "0.17", default-features = false }
itoa = "1"
ryu = "1"
log = "0.4"
lol_alloc = { version = "0.4", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"

[target.'cfg(target_arch = "wasm32")'.dependencies]
log = { version = "0.4", features = ["max_level_off", "release_max_level_off"] }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hashbrown = { version = "0.17", default-features = false, features = ["serde"] }

[features]
wasm = ["dep:lol_alloc"]
wasm-tests = []

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true